Using 'mod' as cross platform modifier for short cuts (CTRL for Linux and Windows and Command for Mac)

--- a/public/pages/flow.html
+++ b/public/pages/flow.html
@@ -60,19 +60,19 @@
                 <div w-mousetrap="{'-': zoomOut}" ng-click="zoomOut()" class="red-add-tab">
                     <i class="fa fa-search-minus"></i>
                 </div>
-                <div w-mousetrap="{'mod+c': copySelection, 'meta+c':copySelection}" ng-click="copySelection()" class="red-add-tab">
+                <div w-mousetrap="{'mod+c': copySelection}" ng-click="copySelection()" class="red-add-tab">
                     <i class="fa fa-files-o"></i>
                 </div>
-                <div w-mousetrap="{'mod+x': cutSelection, 'meta+x':cutSelection}" ng-click="cutSelection()" class="red-add-tab">
+                <div w-mousetrap="{'mod+x': cutSelection}" ng-click="cutSelection()" class="red-add-tab">
                     <i class="fa fa-scissors"></i>
                 </div>
-                <div w-mousetrap="{'mod+v': pasteSelection, 'meta+v':pasteSelection}" ng-click="pasteSelection()" class="red-add-tab">
+                <div w-mousetrap="{'mod+v': pasteSelection}" ng-click="pasteSelection()" class="red-add-tab">
                     <i class="fa fa-clipboard"></i>
                 </div>
-                <div w-mousetrap="{'mod+del': deleteSelection, 'mod+backspace': deleteSelection}" ng-click="deleteSelection()" class="red-add-tab">
+                <div w-mousetrap="{'del': deleteSelection, 'backspace': deleteSelection}" ng-click="deleteSelection()" class="red-add-tab">
                     <i class="fa fa-trash-o"></i>
                 </div>
-                <div w-mousetrap="{'ctrl+n': addFlow}" ng-click="addFlow()" class="red-add-tab"><i class="fa fa-plus"></i></div>
+                <div w-mousetrap="{'mod+n': addFlow}" ng-click="addFlow()" class="red-add-tab"><i class="fa fa-plus"></i></div>
             </div>
             <flow-editor zoom-level="zoomLevel" flow="activeFlow" selected-node="flowEditor.selectedNode" selected-link="flowEditor.selectedLink"></flow-editor>
         </div>
