added clicky metrics to app

--- a/public/index.html
+++ b/public/index.html
@@ -55,5 +55,20 @@
 <script src="/assets/javascripts/dist/application.js"></script>
 <script src="/assets/design/orion/built-editor.min.js"></script>
 
+<!-- Site metrics -->
+<script type="text/javascript">
+var clicky_site_ids = clicky_site_ids || [];
+clicky_site_ids.push(100764712);
+(function() {
+  var s = document.createElement('script');
+  s.type = 'text/javascript';
+  s.async = true;
+  s.src = '//static.getclicky.com/js';
+  ( document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0] ).appendChild( s );
+})();
+</script>
+<noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/100764712ns.gif" /></p></noscript>
+
+
 </body>
 </html>
