--- a/public/pages/flow.html
+++ b/public/pages/flow.html
@@ -46,14 +46,7 @@
         <div class="workspace-container">
             <div class="red-tabs-container">
                 <ul class="red-tabs" id="workspace-tabs">
-                    <li ng-repeat="flow in flows"
-                        ng-class="{active : isActiveFlow(flow)}" ng-click="setActiveFlow(flow)">
-                        <a href ng-click="editFlowName = true" ng-hide="editFlowName" class="red-tab-label" >{{flow.name}}</a>
-                        <form ng-submit="editFlowName = false" ng-hide="!editFlowName" ng-show="editFlowName">
-                            <input ng-model="flow.name" type="text" ng-blur="editFlowName = false" autofocus >
-                        </form>
-                        <span class="delete-flow fa" ng-click="deleteFlow(flow)"></span>
-                    </li>
+                    <flow-tab ng-repeat="flow in flows" ng-click="setActiveFlow(flow)" ng-class="{active : isActiveFlow(flow)}"></flow-tab>
                 </ul>
                 <div w-mousetrap="{'+': zoomIn}"
                      ng-click="zoomIn()" class="red-add-tab">
