Updating the designer UX. removing the palette nodes.

--- a/public/angular/directives/flow/flow-editor/flow-editor.html
+++ b/public/angular/directives/flow/flow-editor/flow-editor.html
@@ -1,5 +1,46 @@
 <div class="flow-editor" ui-on-drop="addNode($data, $event.originalEvent.offsetX, $event.originalEvent.offsetY)">
-  <svg class="flow-editor-workspace" xmlns="http://www.w3.org/2000/svg" version="1.1" width="5000" height="5000" pointer-events="all">
-    <g class="flow-editor-render-area"></g>
+  <svg class="flow-editor-workspace" xmlns="http://www.w3.org/2000/svg" version="1.1"  pointer-events="all">
+    <g class="flow-editor-render-area">
+        <div class="btn-group-vertical pull-right clearfix">
+            <button type="button" w-mousetrap="{'+': zoomIn}" ng-click="zoomIn()" class="btn btn-default btn-sm">
+                <i class="fa fa-plus"></i>
+            </button>
+            <button type="button"  w-mousetrap="{'-': zoomOut}" ng-click="zoomOut()" class="btn btn-default btn-sm">
+                <i class="fa fa-minus"></i>
+            </button>
+            <button type="button" class="btn btn-default btn-sm">
+                <i class="fa fa-angle-double-up"></i>
+            </button>
+        </div>
+        <div class="btn-toolbar pull-right">
+            <div class="btn-group">
+                <button w-mousetrap="{'mod+c': copySelection}" ng-click="copySelection()" class="btn btn-default btn-sm">
+                    <i class="fa fa-files-o"></i>
+                </button>
+            </div>
+            <div class="btn-group">
+                <button w-mousetrap="{'mod+x': cutSelection}" ng-click="cutSelection()" class="btn btn-default btn-sm">
+                    <i class="fa fa-scissors"></i>
+                </button>
+            </div>
+            <div class="btn-group">
+                <button w-mousetrap="{'mod+v': pasteSelection}" ng-click="pasteSelection()" class="btn btn-sm btn-default">
+                    <i class="fa fa-clipboard"></i>
+                </button>
+            </div>
+            <div class="btn-group">
+                <button w-mousetrap="{'del': deleteSelection, 'backspace': deleteSelection}" ng-click="deleteSelection()" class="btn btn-sm btn-default">
+                    <i class="fa fa-trash-o"></i>
+                </button>
+            </div>
+           <div class="btn-group">
+               <button w-mousetrap="{'mod+n': addFlow}" ng-click="addFlow()" class="btn btn-default btn-sm">
+                   <i class="fa fa-plus"></i>
+               </button>
+           </div>
+
+        </div>
+    </g>
+
   </svg>
 </div>
