--- a/public/pages/flow.html
+++ b/public/pages/flow.html
@@ -4,48 +4,43 @@
     <!-- <link rel="stylesheet" href="/assets/design/style.css"/> -->
 
     <div class="page-header">
-        <div class="btn-group">
+
+        <div class="btn-toolbar">
             <!--<button w-mousetrap="{'ctrl+s': save}" ng-click="save()" class="btn btn-lg btn-default">-->
                 <!--<i class="fa fa-floppy-o"></i> Save-->
             <!--</button>-->
-            <button ng-click="restart()" id="btn-deploy" class="btn btn-primary btn-deploy">
-                <i class="fa fa-repeat"></i> Restart
-            </button>
-            <button ng-click="stop()" id="btn-deploy" class="btn btn-danger btn-deploy">
-                <i class="fa fa-stop"></i> Stop
-            </button>
-            <button ng-click="deploy()" id="btn-deploy" class="btn btn-success btn-deploy">
-                <i class="fa fa-play"></i> Run
-            </button>
+            <div class="btn-group">
+                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+                   <i class="fa fa-th-large fa-lg"></i>
+                </button>
+                <ul class="dropdown-menu flow-menu" role="menu">
+                    <li class="flow-menu-item" ng-repeat="flow in flows">
+                        <a href>{{flow.name}}</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="btn-group">
+                <button ng-click="restart()" id="btn-deploy" class="btn btn-primary btn-deploy">
+                    <i class="fa fa-repeat"></i> Restart
+                </button>
+            </div>
+            <div class="btn-group">
+                <button ng-click="stop()" id="btn-deploy" class="btn btn-danger btn-deploy">
+                    <i class="fa fa-stop"></i> Stop
+                </button>
+            </div>
+           <div class="btn-group">
+               <button ng-click="deploy()" id="btn-deploy" class="btn btn-success btn-deploy">
+                   <i class="fa fa-play"></i> Run
+               </button>
+           </div>
         </div>
     </div>
 
     <div id="main-container" class="main-container" ng-mousemove="setMousePosition($event)" ng-mouseout="clearMousePosition()">
-        <flow-node-palette flow-node-types="flowNodeTypes"></flow-node-palette>
+        <!--<flow-node-palette flow-node-types="flowNodeTypes"></flow-node-palette>-->
         <div class="workspace-container">
-            <div class="red-tabs-container">
-                <flow-tabs tabs="flows" id="workspace-tabs" close-tab="deleteFlow" active-tab="activeFlow"></flow-tabs>
-                <div w-mousetrap="{'+': zoomIn}"
-                     ng-click="zoomIn()" class="red-add-tab">
-                    <i class="fa fa-search-plus"></i>
-                </div>
-                <div w-mousetrap="{'-': zoomOut}" ng-click="zoomOut()" class="red-add-tab">
-                    <i class="fa fa-search-minus"></i>
-                </div>
-                <div w-mousetrap="{'mod+c': copySelection}" ng-click="copySelection()" class="red-add-tab">
-                    <i class="fa fa-files-o"></i>
-                </div>
-                <div w-mousetrap="{'mod+x': cutSelection}" ng-click="cutSelection()" class="red-add-tab">
-                    <i class="fa fa-scissors"></i>
-                </div>
-                <div w-mousetrap="{'mod+v': pasteSelection}" ng-click="pasteSelection()" class="red-add-tab">
-                    <i class="fa fa-clipboard"></i>
-                </div>
-                <div w-mousetrap="{'del': deleteSelection, 'backspace': deleteSelection}" ng-click="deleteSelection()" class="red-add-tab">
-                    <i class="fa fa-trash-o"></i>
-                </div>
-                <div w-mousetrap="{'mod+n': addFlow}" ng-click="addFlow()" class="red-add-tab"><i class="fa fa-plus"></i></div>
-            </div>
+
             <flow-editor zoom-level="zoomLevel" flow="activeFlow" selected-node="flowEditor.selectedNode" selected-link="flowEditor.selectedLink"></flow-editor>
         </div>
 
