--- a/public/pages/flow.html
+++ b/public/pages/flow.html
@@ -36,29 +36,12 @@
            </div>
         </div>
     </div>
-
+    <flow-editor-omnibox></flow-editor-omnibox>
     <div id="main-container" class="main-container" ng-mousemove="setMousePosition($event)" ng-mouseout="clearMousePosition()">
         <!--<flow-node-palette flow-node-types="flowNodeTypes"></flow-node-palette>-->
         <div class="workspace-container">
 
             <flow-editor zoom-level="zoomLevel" flow="activeFlow" selected-node="flowEditor.selectedNode" selected-link="flowEditor.selectedLink"></flow-editor>
         </div>
-
-        <!--<div id="sidebar" class="edit-panel flow-node-editor flow-node-editor-{{flowEditor.selectedNode.type}}" ng-controller="flowNodeEditorController" ng-show="flowEditor.selectedNode">-->
-            <!--<div class="node-editor panel panel-default">-->
-                <!--<div class="panel-heading">Edit Node</div>-->
-                <!--<div class="panel-body">-->
-                    <!--<form ng-submit="updateNode()" class="form">-->
-                        <!--<div ng-include="flowEditor.flowNodeType.formTemplatePath"></div>-->
-                        <!--<div class="form-group debug-node-form">-->
-                            <!--<label for="debug-node">Debug</label>-->
-                            <!--<input  id="debug-node" class="form-control" type="checkbox"-->
-                                    <!--ng-model="flowEditor.editorNode.debug">-->
-                        <!--</div>-->
-                        <!--<button type="submit" class="btn btn-lg btn-block btn-primary">Update Node</button>-->
-                    <!--</form>-->
-                <!--</div>-->
-            <!--</div>-->
-        <!--</div>-->
     </div>
 </div>
