Add floaty buttons

--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
     </style>
 </head>
 <body class="contrast-sea-blue container-fluid" ng-app="octobluApp">
-<div ui-view="" class="row-fluid"></div>
+<div ui-view="" class="row-fluid full-height"></div>
 
 <footer></footer>
 
