--- a/public/pages/flow.html
+++ b/public/pages/flow.html
@@ -1,10 +1,9 @@
-<div class="design2 designer-container">
+<div class="design2 designer-container full-height">
     <!--<link href="/assets/design/jquery/css/smoothness/jquery-ui-1.10.3.custom.min.css" rel="stylesheet" media="screen"/>-->
     <!--<link rel="stylesheet" type="text/css" href="/assets/design/orion/built-editor.css"/>-->
     <!-- <link rel="stylesheet" href="/assets/design/style.css"/> -->
 
-    <div class="page-header">
-
+    <div class="flow-toolbar">
         <div class="btn-toolbar">
             <!--<button w-mousetrap="{'ctrl+s': save}" ng-click="save()" class="btn btn-lg btn-default">-->
                 <!--<i class="fa fa-floppy-o"></i> Save-->
@@ -37,7 +36,7 @@
         </div>
     </div>
 
-    <div id="main-container" class="main-container" ng-mousemove="setMousePosition($event)" ng-mouseout="clearMousePosition()">
+    <div class="full-height" ng-mousemove="setMousePosition($event)" ng-mouseout="clearMousePosition()">
         <!--<flow-node-palette flow-node-types="flowNodeTypes"></flow-node-palette>-->
         <div class="workspace-container">
 
