Filtering node types in omnibox v1

--- a/public/pages/flow.html
+++ b/public/pages/flow.html
@@ -36,7 +36,7 @@
            </div>
         </div>
     </div>
-    <flow-editor-omnibox></flow-editor-omnibox>
+    <flow-editor-omnibox nodes="flowNodeTypes"></flow-editor-omnibox>
     <div id="main-container" class="main-container" ng-mousemove="setMousePosition($event)" ng-mouseout="clearMousePosition()">
         <!--<flow-node-palette flow-node-types="flowNodeTypes"></flow-node-palette>-->
         <div class="workspace-container">
