--- a/public/pages/flow-editor-omnibox.html
+++ b/public/pages/flow-editor-omnibox.html
@@ -1,3 +1,3 @@
 <div>
-    <input type="text">
+    <input type="text" ng-model="selectedNode" placeholder="Search" typeahead="node.name as nodeName for node in nodes | filterResults($viewValue)" typeahead-template-url="pages/omnibox-item.html" class="form-control">
 </div>
