Get Grid working

--- a/public/angular/directives/flow/flow-editor/flow-editor.html
+++ b/public/angular/directives/flow/flow-editor/flow-editor.html
@@ -1,7 +1,18 @@
 <div class="flow-editor" ui-on-drop="addNode($data, $event.originalEvent.offsetX, $event.originalEvent.offsetY)">
   <svg class="flow-editor-workspace" xmlns="http://www.w3.org/2000/svg" version="1.1"  pointer-events="all">
-    <g class="flow-editor-render-area">
-        <div class="btn-group-vertical pull-right clearfix">
+    <defs>
+      <pattern id="smallGrid" width="8" height="8" patternUnits="userSpaceOnUse">
+        <path d="M 8 0 L 0 0 0 8" fill="none" stroke="gray" stroke-width="0.5"/>
+      </pattern>
+      <pattern id="grid" width="80" height="80" patternUnits="userSpaceOnUse">
+        <rect width="80" height="80" fill="url(#smallGrid)"/>
+        <path d="M 80 0 L 0 0 0 80" fill="none" stroke="gray" stroke-width="1"/>
+      </pattern>
+    </defs>
+    <g class="flow-editor-render-area" fill="url(#grid)">
+    </g>
+  </svg>
+<!--         <div class="btn-group-vertical pull-right clearfix">
             <button type="button" w-mousetrap="{'+': zoomIn}" ng-click="zoomIn()" class="btn btn-default btn-sm">
                 <i class="fa fa-plus"></i>
             </button>
@@ -40,7 +51,5 @@
            </div>
 
         </div>
-    </g>
-
-  </svg>
+ -->
 </div>
