--- a/public/pages/flow-editor-omnibox.html
+++ b/public/pages/flow-editor-omnibox.html
@@ -1,3 +1,3 @@
-<div>
+<div class="floating-omnibox">
     <input type="text" ng-model="selectedNode" placeholder="Search" typeahead="nodeName as node.name for node in nodes | filter : {name : $viewValue }" typeahead-template-url="pages/omnibox-item.html" class="form-control">
 </div>
