Big, friendly bar

--- a/public/pages/flow.html
+++ b/public/pages/flow.html
@@ -9,7 +9,7 @@
                 <!--<i class="fa fa-floppy-o"></i> Save-->
             <!--</button>-->
             <div class="btn-group">
-                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+                <button type="button" class="btn btn-lg btn-default dropdown-toggle" data-toggle="dropdown">
                    <i class="fa fa-th-large fa-lg"></i>
                 </button>
                 <ul class="dropdown-menu flow-menu" role="menu">
@@ -19,17 +19,17 @@
                 </ul>
             </div>
             <div class="btn-group">
-                <button ng-click="restart()" id="btn-deploy" class="btn btn-primary btn-deploy">
+                <button ng-click="restart()" id="btn-deploy" class="btn btn-lg btn-primary btn-deploy">
                     <i class="fa fa-repeat"></i> Restart
                 </button>
             </div>
             <div class="btn-group">
-                <button ng-click="stop()" id="btn-deploy" class="btn btn-danger btn-deploy">
+                <button ng-click="stop()" id="btn-deploy" class="btn btn-lg btn-danger btn-deploy">
                     <i class="fa fa-stop"></i> Stop
                 </button>
             </div>
            <div class="btn-group">
-               <button ng-click="deploy()" id="btn-deploy" class="btn btn-success btn-deploy">
+               <button ng-click="deploy()" id="btn-deploy" class="btn btn-lg btn-success btn-deploy">
                    <i class="fa fa-play"></i> Run
                </button>
            </div>
