--- a/public/pages/flow.html
+++ b/public/pages/flow.html
@@ -3,13 +3,25 @@
     <!--<link rel="stylesheet" type="text/css" href="/assets/design/orion/built-editor.css"/>-->
     <!-- <link rel="stylesheet" href="/assets/design/style.css"/> -->
 
+
+    <div class="zoom-toolbar">
+        <div class="btn-group-vertical">
+                <button ng-click="zoomIn()" id="btn-deploy" class="btn btn-default btn-deploy button-shadow" title="Zoom In" tooltip="Zoom In" tooltip-placement="left">
+                        <i class="fa fa-plus"></i>
+                </button>
+                <button ng-click="zoomOut()" id="btn-deploy" class="btn btn-default btn-deploy button-shadow" title="Zoom Out" tooltip="Zoom Out" tooltip-placement="left">
+                    <i class="fa fa-minus"></i>
+                </button>
+        </div>
+    </div>
+
     <div class="flow-toolbar">
         <div class="btn-toolbar">
             <!--<button w-mousetrap="{'ctrl+s': save}" ng-click="save()" class="btn btn-lg btn-default">-->
                 <!--<i class="fa fa-floppy-o"></i> Save-->
             <!--</button>-->
             <div class="btn-group">
-                <button type="button" class="btn btn-lg btn-default dropdown-toggle" data-toggle="dropdown">
+                <button type="button" class="btn btn-default dropdown-toggle button-shadow" data-toggle="dropdown" title="Flows" tooltip="Other Flows" tooltip-placement="bottom">
                    <i class="fa fa-th-large fa-lg"></i>
                 </button>
                 <ul class="dropdown-menu flow-menu" role="menu">
@@ -19,18 +31,14 @@
                 </ul>
             </div>
             <div class="btn-group">
-                <button ng-click="restart()" id="btn-deploy" class="btn btn-lg btn-primary btn-deploy">
-                    <i class="fa fa-repeat"></i> Restart
+                <button ng-click="restart()" id="btn-deploy" class="btn btn-default btn-deploy button-shadow" title="Restart" tooltip="Restart" tooltip-placement="bottom">
+                    <i class="fa fa-repeat"></i>
                 </button>
-            </div>
-            <div class="btn-group">
-                <button ng-click="stop()" id="btn-deploy" class="btn btn-lg btn-danger btn-deploy">
-                    <i class="fa fa-stop"></i> Stop
+                <button ng-click="stop()" id="btn-deploy" class="btn btn-default btn-deploy button-shadow" title="Stop" tooltip="Stop" tooltip-placement="bottom">
+                    <i class="fa fa-stop"></i>
                 </button>
-            </div>
-           <div class="btn-group">
-               <button ng-click="deploy()" id="btn-deploy" class="btn btn-lg btn-success btn-deploy">
-                   <i class="fa fa-play"></i> Run
+                <button ng-click="deploy()" id="btn-deploy" class="btn btn-default btn-deploy button-shadow" title="Start" tooltip="Start" tooltip-placement="bottom">
+                   <i class="fa fa-play"></i>
                </button>
            </div>
         </div>
