Blue grid, navbar buttons

--- a/public/angular/directives/flow/flow-editor/flow-editor.html
+++ b/public/angular/directives/flow/flow-editor/flow-editor.html
@@ -2,54 +2,14 @@
   <svg class="flow-editor-workspace" xmlns="http://www.w3.org/2000/svg" version="1.1"  pointer-events="all">
     <defs>
       <pattern id="smallGrid" width="8" height="8" patternUnits="userSpaceOnUse">
-        <path d="M 8 0 L 0 0 0 8" fill="none" stroke="gray" stroke-width="0.5"/>
+        <path d="M 8 0 L 0 0 0 8" fill="none" stroke="#CCCCFF" stroke-width="0.5"/>
       </pattern>
       <pattern id="grid" width="80" height="80" patternUnits="userSpaceOnUse">
         <rect width="80" height="80" fill="url(#smallGrid)"/>
-        <path d="M 80 0 L 0 0 0 80" fill="none" stroke="gray" stroke-width="1"/>
+        <path d="M 80 0 L 0 0 0 80" fill="none" stroke="#BBBBFF" stroke-width="1"/>
       </pattern>
     </defs>
     <g class="flow-editor-render-area" fill="url(#grid)">
     </g>
   </svg>
-<!--         <div class="btn-group-vertical pull-right clearfix">
-            <button type="button" w-mousetrap="{'+': zoomIn}" ng-click="zoomIn()" class="btn btn-default btn-sm">
-                <i class="fa fa-plus"></i>
-            </button>
-            <button type="button"  w-mousetrap="{'-': zoomOut}" ng-click="zoomOut()" class="btn btn-default btn-sm">
-                <i class="fa fa-minus"></i>
-            </button>
-            <button type="button" class="btn btn-default btn-sm">
-                <i class="fa fa-angle-double-up"></i>
-            </button>
-        </div>
-        <div class="btn-toolbar pull-right">
-            <div class="btn-group">
-                <button w-mousetrap="{'mod+c': copySelection}" ng-click="copySelection()" class="btn btn-default btn-sm">
-                    <i class="fa fa-files-o"></i>
-                </button>
-            </div>
-            <div class="btn-group">
-                <button w-mousetrap="{'mod+x': cutSelection}" ng-click="cutSelection()" class="btn btn-default btn-sm">
-                    <i class="fa fa-scissors"></i>
-                </button>
-            </div>
-            <div class="btn-group">
-                <button w-mousetrap="{'mod+v': pasteSelection}" ng-click="pasteSelection()" class="btn btn-sm btn-default">
-                    <i class="fa fa-clipboard"></i>
-                </button>
-            </div>
-            <div class="btn-group">
-                <button w-mousetrap="{'del': deleteSelection, 'backspace': deleteSelection}" ng-click="deleteSelection()" class="btn btn-sm btn-default">
-                    <i class="fa fa-trash-o"></i>
-                </button>
-            </div>
-           <div class="btn-group">
-               <button w-mousetrap="{'mod+n': addFlow}" ng-click="addFlow()" class="btn btn-default btn-sm">
-                   <i class="fa fa-plus"></i>
-               </button>
-           </div>
-
-        </div>
- -->
 </div>
