Context aware omnibox for node inspector

--- a/public/assets/node_forms/channel_form.html
+++ b/public/assets/node_forms/channel_form.html
@@ -1,6 +1,6 @@
 <div class="form-group">
   <label for="name">Name</label>
-  <input  id="name" class="form-control" type="text" ng-model="flowEditor.editorNode.name">
+  <input  id="name" class="form-control" type="text" ng-model="selectedFlowNode.name">
 </div>
 
-<endpoint-selector ng-model="flowEditor.editorNode"></endpoint-selector>
+<endpoint-selector ng-model="selectedFlowNode"></endpoint-selector>
