--- a/public/assets/node_forms/comment_form.html
+++ b/public/assets/node_forms/comment_form.html
@@ -1,4 +1,4 @@
 <div class="form-group">
   <label for="name">Name</label>
-  <input  id="name" class="form-control" type="text" ng-model="flowEditor.editorNode.name">
+  <input  id="name" class="form-control" type="text" ng-model="selectedFlowNode.name">
 </div>
