--- a/public/assets/node_forms/function_form.html
+++ b/public/assets/node_forms/function_form.html
@@ -1,9 +1,9 @@
 <div class="form-group">
   <label for="name">Name</label>
-  <input  id="name" class="form-control" type="text" ng-model="flowEditor.editorNode.name">
+  <input  id="name" class="form-control" type="text" ng-model="selectedFlowNode.name">
 </div>
 
 <div class="form-group">
   <label for="func">Function</label>
-  <div ui-ace="{mode: 'javascript', theme: 'chrome'}" class="code-editor" ng-model="flowEditor.editorNode.func"></div>
+  <div ui-ace="{mode: 'javascript', theme: 'chrome'}" class="code-editor" ng-model="selectedFlowNode.func"></div>
 </div>
