--- a/public/assets/node_forms/switch_form.html
+++ b/public/assets/node_forms/switch_form.html
@@ -1,19 +1,19 @@
 <div>
   <div class="form-group">
     <label for="name">Name</label>
-    <input  id="name" class="form-control" type="text" ng-model="flowEditor.editorNode.name">
+    <input  id="name" class="form-control" type="text" ng-model="selectedFlowNode.name">
   </div>
 
   <div class="form-group">
     <label for="property">Property to switch on</label>
-    <input  id="property" ng-model="flowEditor.editorNode.property" type="text" class="form-control" required>
+    <input  id="property" ng-model="selectedFlowNode.property" type="text" class="form-control" required>
   </div>
 
-  <switch-rules ng-model="flowEditor.editorNode">
+  <switch-rules ng-model="selectedFlowNode">
 
   <div class="checkbox">
     <label>
-      <input type="checkbox" ng-model="flowEditor.editorNode.checkall"> Check all rules
+      <input type="checkbox" ng-model="selectedFlowNode.checkall"> Check all rules
     </label>
   </div>
 </div>
