--- a/public/assets/node_forms/template_form.html
+++ b/public/assets/node_forms/template_form.html
@@ -1,9 +1,9 @@
 <div class="form-group">
     <label for="name">Name</label>
-    <input  id="name" class="form-control" type="text" ng-model="flowEditor.editorNode.name">
+    <input  id="name" class="form-control" type="text" ng-model="selectedFlowNode.name">
 </div>
 
 <div class="form-group">
     <label for="template">Template</label>
-    <div id="template" ui-ace="{mode: 'handlebars', theme: 'chrome'}" class="code-editor" ng-model="flowEditor.editorNode.template"></div>
+    <div id="template" ui-ace="{mode: 'handlebars', theme: 'chrome'}" class="code-editor" ng-model="selectedFlowNode.template"></div>
 </div>
