--- a/public/pages/flow.html
+++ b/public/pages/flow.html
@@ -64,13 +64,13 @@
         </div>
     </div>
 
-    <flow-editor-omnibox nodes="flowNodeTypes"></flow-editor-omnibox>
+    <flow-editor-omnibox nodes="flowNodeTypes" flow="activeFlow"></flow-editor-omnibox>
 
     <div class="full-height" ng-mousemove="setMousePosition($event)" ng-mouseout="clearMousePosition()">
     <!--<div id="main-container" class="main-container" ng-mousemove="setMousePosition($event)" ng-mouseout="clearMousePosition()">-->
         <!--<flow-node-palette flow-node-types="flowNodeTypes"></flow-node-palette>-->
         <div class="workspace-container">
-            <flow-editor zoom-level="zoomLevel" flow="activeFlow" selected-node="flowEditor.selectedNode" selected-link="flowEditor.selectedLink"></flow-editor>
+            <flow-editor flow="activeFlow"></flow-editor>
         </div>
     </div>
 </div>
