--- a/public/assets/node_forms/device_form.html
+++ b/public/assets/node_forms/device_form.html
@@ -1,4 +1,4 @@
 <div class="form-group">
     <label for="name">Name</label>
-    <input  id="name" class="form-control" type="text" ng-model="selectedFlowNode.name">
+    <input  id="name" class="form-control" type="text" ng-model="flowNode.name">
 </div>
