--- a/public/assets/node_forms/sentiment_form.html
+++ b/public/assets/node_forms/sentiment_form.html
@@ -1,6 +1,6 @@
 <div class="form-group">
     <label for="name">Name</label>
-    <input  id="name" class="form-control" type="text" ng-model="selectedFlowNode.name">
+    <input  id="name" class="form-control" type="text" ng-model="flowNode.name">
 </div>
 
 <div class="form-group">
