--- a/public/pages/omnibox-item.html
+++ b/public/pages/omnibox-item.html
@@ -1,3 +1,10 @@
-<div>
-  <span><pre>{{match.model | json}}</pre></span>
+<div class="omnibox-item flow-node-{{match.model.class}}">
+  <div class="media">
+    <div class="media-object pull-left">
+      <i class="fa {{match.model.icon}} fa-2x"></i>
+    </div>
+    <div class="media-body">
+      <h5 class="media-heading">{{match.model.name || match.model.defaults.type}}</h5>
+    </div>
+  </div>
 </div>
