Use full height

--- a/public/pages/flow.html
+++ b/public/pages/flow.html
@@ -1,4 +1,4 @@
-<div class="design2 designer-container">
+<div class="design2 designer-container full-height">
     <!--<link href="/assets/design/jquery/css/smoothness/jquery-ui-1.10.3.custom.min.css" rel="stylesheet" media="screen"/>-->
     <!--<link rel="stylesheet" type="text/css" href="/assets/design/orion/built-editor.css"/>-->
     <!-- <link rel="stylesheet" href="/assets/design/style.css"/> -->
@@ -69,7 +69,7 @@
     <div class="full-height" ng-mousemove="setMousePosition($event)" ng-mouseout="clearMousePosition()">
     <!--<div id="main-container" class="main-container" ng-mousemove="setMousePosition($event)" ng-mouseout="clearMousePosition()">-->
         <!--<flow-node-palette flow-node-types="flowNodeTypes"></flow-node-palette>-->
-        <div class="workspace-container">
+        <div class="workspace-container full-height">
             <flow-editor flow="activeFlow"></flow-editor>
         </div>
     </div>
