add copy/cut/paste back in

--- a/public/pages/flow.html
+++ b/public/pages/flow.html
@@ -1,4 +1,4 @@
-<div class="design2 designer-container full-height">
+<div class="design2 designer-container full-height" w-mousetrap="{'mod+c':copySelection, 'mod+x': cutSelection, 'mod+v':pasteSelection, 'backspace': deleteSelection, 'del': deleteSelection}">
     <!--<link href="/assets/design/jquery/css/smoothness/jquery-ui-1.10.3.custom.min.css" rel="stylesheet" media="screen"/>-->
     <!--<link rel="stylesheet" type="text/css" href="/assets/design/orion/built-editor.css"/>-->
     <!-- <link rel="stylesheet" href="/assets/design/style.css"/> -->
