--- a/public/angular/directives/flow/flow-editor/flow-editor.html
+++ b/public/angular/directives/flow/flow-editor/flow-editor.html
@@ -2,11 +2,11 @@
   <svg class="flow-editor-workspace" xmlns="http://www.w3.org/2000/svg" version="1.1"  pointer-events="all">
     <defs>
       <pattern id="smallGrid" width="8" height="8" patternUnits="userSpaceOnUse">
-        <path d="M 8 0 L 0 0 0 8" fill="none" stroke="#CCCCFF" stroke-width="0.5"/>
+        <path d="M 8 0 L 0 0 0 8" fill="none" stroke="#1E4F95" stroke-width="0.25"/>
       </pattern>
       <pattern id="grid" width="80" height="80" patternUnits="userSpaceOnUse">
         <rect width="80" height="80" fill="url(#smallGrid)"/>
-        <path d="M 80 0 L 0 0 0 80" fill="none" stroke="#BBBBFF" stroke-width="1"/>
+        <path d="M 80 0 L 0 0 0 80" fill="none" stroke="#1E4F95" stroke-width="0.5"/>
       </pattern>
     </defs>
     <g class="flow-editor-render-area" fill="url(#grid)">
