add start, stop, restart

--- a/public/pages/flow.html
+++ b/public/pages/flow.html
@@ -51,13 +51,13 @@
                 </ul>
             </div>
             <div class="btn-group">
-                <button ng-click="restart()" id="btn-deploy" class="btn btn-default btn-deploy button-shadow" tooltip="Restart" tooltip-placement="bottom">
+                <button ng-click="restart()" class="btn btn-default button-shadow" tooltip="Restart" tooltip-placement="bottom">
                     <i class="fa fa-repeat"></i>
                 </button>
-                <button ng-click="stop()" id="btn-deploy" class="btn btn-default btn-deploy button-shadow" tooltip="Stop" tooltip-placement="bottom">
+                <button ng-click="stop()" class="btn btn-default button-shadow" tooltip="Stop" tooltip-placement="bottom">
                     <i class="fa fa-stop"></i>
                 </button>
-                <button ng-click="deploy()" id="btn-deploy" class="btn btn-default btn-deploy button-shadow" tooltip="Start" tooltip-placement="bottom">
+                <button ng-click="start()" class="btn btn-default button-shadow" tooltip="Start" tooltip-placement="bottom">
                    <i class="fa fa-play"></i>
                </button>
            </div>
