--- a/public/pages/flow.html
+++ b/public/pages/flow.html
@@ -44,7 +44,7 @@
                 <button type="button" class="btn btn-default dropdown-toggle button-shadow" data-toggle="dropdown" tooltip="Other Flows" tooltip-placement="bottom">
                    <i class="fa fa-th-large fa-lg"></i>
                 </button>
-                <ul class="dropdown-menu flow-menu" role="menu">
+                <ul class="dropdown-menu dropdown-menu-right flow-menu" role="menu">
                     <li class="flow-menu-item" ng-repeat="flow in flows">
                         <a href ng-click="setActiveFlow(flow)">{{flow.name}}</a>
                     </li>
