--- a/public/pages/flow-node-editor.html
+++ b/public/pages/flow-node-editor.html
@@ -3,8 +3,8 @@
     <div class="panel-heading">Edit Node</div>
     <div class="panel-body">
       <form class="form">
-        <div ng-show="flowNodeType" ng-include="flowNodeType.formTemplatePath"></div>
-        <div ng-show="flowNode.type === 'channel'">
+        <div ng-if="flowNodeType" ng-include="flowNodeType.formTemplatePath"></div>
+        <div ng-if="flowNode.type === 'channel'">
             <endpoint-selector ng-model="flowNode"></endpoint-selector>
         </div>
         <div class="form-group debug-node-form">
