--- a/public/pages/octoblu.html
+++ b/public/pages/octoblu.html
@@ -36,7 +36,7 @@
                 </li>
                 <li ui-sref-active="active"><a href ui-sref=".home"><i class="fa fa-home fa-lg"></i>&nbsp;Home</a></li>
                 <li ui-sref-active="active"><a href ui-sref=".connector.nodes.all"><i class="fa fa-code-fork fa-lg"></i>&nbsp;Connect</a></li>
-                <li ui-sref-active="active"><a href ui-sref=".design"><i class="fa fa-edit fa-lg"></i>&nbsp;Design</a></li>
+                <li ui-sref-active="active"><a href ui-sref="design"><i class="fa fa-edit fa-lg"></i>&nbsp;Design</a></li>
                 <li ui-sref-active="active"><a href ui-sref=".process"><i class="fa fa-tasks fa-lg"></i>&nbsp;Process</a></li>
                 <li ui-sref-active="active"><a href ui-sref=".analyze"><i class="fa fa-bar-chart-o fa-lg"></i>&nbsp;Analyze</a></li>
                 <li ui-sref-active="active"><a href ui-sref=".admin.all"><i class="fa fa-lock fa-lg"></i>&nbsp;Admin</a></li>
