--- a/public/pages/endpoint_selector.html
+++ b/public/pages/endpoint_selector.html
@@ -1,7 +1,7 @@
 <div>
   <div class="form-group">
     <label for="selectedEndpoint">Endpoint</label>
-    <select id="selectedEndpoint" ng-model="selectedEndpoint" ng-options="getEndpointLabel(endpoint) for endpoint in node.application.resources" class="form-control"></select>
+    <select id="selectedEndpoint" ng-model="selectedEndpoint" ng-options="getEndpointLabel(endpoint) for endpoint in resources" class="form-control"></select>
   </div>
 
   <div class="form-group" ng-repeat="(key, value) in node.urlParams">
