--- a/public/angular/directives/flow/flow-browser/flow-browser.html
+++ b/public/angular/directives/flow/flow-browser/flow-browser.html
@@ -1,20 +1,16 @@
 <div class="flow-browser">
-    <div class="btn-toolbar">
+    <div class="btn-toolbar drawer-controls">
         <div class="btn-group">
-            <button>
-                <i class="fa fa-plus"></i>
-            </button>
-            <button>
-                <i class="fa fa-minus"></i>
+            <button class="btn btn-default btn-sm" ng-click="maximized = !maximized">
+                <i class="fa fa-lg" ng-class="{'fa-angle-double-down' : maximized, 'fa-angle-double-up' : !maximized}"></i>
             </button>
         </div>
     </div>
-
-    <div class="flow-browser-drawer">
+    <div class="drawer" ng-class="{maximized: maximized}">
         <ul>
             <li class="flow-node-type" ng-repeat="flowNodeType in flowNodeTypes"
                 ng-click="addFlowNodeType(flowNodeType)">
-                <div class="node-thumbnail animated-popout"
+                <div class="node-thumbnail"
                      style="background-image: url(http://octoblu-devices.s3.amazonaws.com/beaglebone.png);"></div>
                 <label class="text-center">{{flowNodeType.name || flowNodeType.type}}</label>
             </li>
