--- a/public/pages/flow.html
+++ b/public/pages/flow.html
@@ -4,51 +4,56 @@
     <div class="logo-toolbar">
         <img src="/assets/images/octoblu.png" height="50px"/>
     </div>
-
     <div class="flow-toolbar">
-        <div class="btn-toolbar">
-            <div class="btn-group">
-                <button ng-click="zoomIn()" w-mousetrap="{'+' : zoomIn, '=' : zoomIn}"
-                        class="btn btn-default button-shadow" tooltip="Zoom In" tooltip-placement="left">
-                    <i class="fa fa-plus"></i>
-                </button>
-                <button ng-click="zoomOut()" w-mousetrap="{'-' : zoomOut, '_' : zoomOut}"
-                        class="btn btn-default button-shadow" tooltip="Zoom Out" tooltip-placement="left">
-                    <i class="fa fa-minus"></i>
-                </button>
-            </div>
-            <div class="btn-group">
-                <a class="btn btn-default button-shadow" href ui-sref="ob.community" tooltip="Community"
-                   tooltip-placement="bottom">
-                    <i class="fa fa-group fa-lg"></i>
-                </a>
-            </div>
+        <div class="input-group flow-name" dropdown>
+            <input type="text" class="form-control" placeholder="Flow Name" ng-model="activeFlow.name">
+            <span class="input-group-addon flow-dropdown" dropdown-toggle>
+                <i class="fa fa-lg fa-angle-down"></i>
+            </span>
+            <ul class="dropdown-menu" role="menu">
+                <li class="text-center" ng-click="addFlow()"><a class="fa fa-plus" href></a></li>
+                <li role="presentation" class="divider"></li>
+                <li class="text-center" ng-click="setActiveFlow(flow)" ng-repeat="flow in flows | orderBy: 'name'"><a href>{{flow.name}}</a></li>
+            </ul>
+        </div>
 
-            <div class="btn-group">
-                <button type="button" class="btn btn-default dropdown-toggle button-shadow" data-toggle="dropdown"
-                        tooltip="Other Flows" tooltip-placement="bottom">
-                    <i class="fa fa-th-large fa-lg"></i>
-                </button>
-                <ul class="dropdown-menu dropdown-menu-right flow-menu" role="menu">
-                    <li class="flow-menu-item" ng-repeat="flow in flows">
-                        <a href ng-click="setActiveFlow(flow)">{{flow.name}}</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="btn-group">
-                <button ng-click="restart()" class="btn btn-default button-shadow" tooltip="Restart"
-                        tooltip-placement="bottom">
-                    <i class="fa fa-repeat"></i>
-                </button>
-                <button ng-click="stop()" class="btn btn-default button-shadow" tooltip="Stop"
-                        tooltip-placement="bottom">
-                    <i class="fa fa-stop"></i>
-                </button>
-                <button ng-click="start()" class="btn btn-default button-shadow" tooltip="Start"
-                        tooltip-placement="bottom">
-                    <i class="fa fa-play"></i>
-                </button>
-            </div>
+
+        <div class="btn-group">
+            <button ng-click="zoomIn()" w-mousetrap="{'+' : zoomIn, '=' : zoomIn}"
+                    class="btn btn-default button-shadow" tooltip="Zoom In" tooltip-placement="left">
+                <i class="fa fa-plus"></i>
+            </button>
+            <button ng-click="zoomOut()" w-mousetrap="{'-' : zoomOut, '_' : zoomOut}"
+                    class="btn btn-default button-shadow" tooltip="Zoom Out" tooltip-placement="left">
+                <i class="fa fa-minus"></i>
+            </button>
+        </div>
+
+
+        <!--<div class="btn-group">-->
+        <!--<button type="button" class="btn btn-default dropdown-toggle button-shadow" data-toggle="dropdown"-->
+        <!--tooltip="Other Flows" tooltip-placement="bottom">-->
+        <!--<i class="fa fa-th-large fa-lg"></i>-->
+        <!--</button>-->
+        <!--<ul class="dropdown-menu dropdown-menu-right flow-menu" role="menu">-->
+        <!--<li class="flow-menu-item" ng-repeat="flow in flows">-->
+        <!--<a href ng-click="setActiveFlow(flow)">{{flow.name}}</a>-->
+        <!--</li>-->
+        <!--</ul>-->
+        <!--</div>-->
+        <div class="btn-group">
+            <button ng-click="restart()" class="btn btn-default button-shadow" tooltip="Restart"
+                    tooltip-placement="bottom">
+                <i class="fa fa-repeat"></i>
+            </button>
+            <button ng-click="stop()" class="btn btn-default button-shadow" tooltip="Stop"
+                    tooltip-placement="bottom">
+                <i class="fa fa-stop"></i>
+            </button>
+            <button ng-click="start()" class="btn btn-default button-shadow" tooltip="Start"
+                    tooltip-placement="bottom">
+                <i class="fa fa-play"></i>
+            </button>
         </div>
     </div>
 
